# nutri-voice-telegram-bot

./: .env.example  .gitignore  LICENSE  README.md  __init__.py  auth_helper.py  config.py  conversation_manager.py  docker-compose.yml  init.sql  main.py  openai_manager.py  openai_tools.py  pyproject.toml  requirements.txt  speech_manager.py
.cursor/rules/: general-rules.mdc  python-general.mdc  uv.mdc
.github/workflows/: lint.yml
Commands/: help_command.py  start_command.py
Constants/: const.py  error_responses.py  prompts.py  responses.py  settings.py  tools.py
DBTools/: __init__.py  data_tools.py  examples.py  models.py  mongodb.py
Handlers/: __init__.py  image_handler.py  text_handler.py  voice_handler.py
MongoDB/: init-mongo.js
SqlDB/: __init__.py  cache.py  database.py  middleware.py  models.py  user_cache.py  user_details_service.py  user_service.py
Tools/: auth_helper.py  conversation_manager.py  database_manager.py  errors_handler.py  image_helper.py  openai_manager.py  openai_session.py  openai_tools.py  openai_user_details_manager.py  speech_manager.py  survey_agent.py  survey_helper.py
agents/: __init__.py
dbmanager/: README.md  __init__.py  data_tools.py  examples.py  models.py  mongo_manager.py
models/: __init__.py  user.py
nutrition_agents/: __init__.py  base_agent.py  context.py  handoffs.py  interview_engine.py  orchestrator_agent.py  user_registration_agent.py
