[project]
name = "nutri-voice-telegram-bot-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai==1.76.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.11.5",
    "pymongo==4.11.0",
    "python-dotenv==1.1.0",
    "python-telegram-bot==22.0",
    "requests==2.32.3",
    "sqlalchemy==2.0.30",
]
